@@ -1,3 +1,11 @@
+2020-07-04  Lauro Moura  <lmoura@igalia.com>
+
+        [WebDriver][WPE][GTK] Garden post update failures
+
+        Unreviewed test gardening.
+
+        * TestExpectations.json:
+
 2020-07-03  Lauro Moura  <lmoura@igalia.com>
 
         [WebDriver][WPE] Update imported selenium to a version that enables WPE WebDriver tests
